project(generator)

set(
  SRC
  affiliation.cpp
  affiliation.hpp
  boost_helpers.hpp
  check_model.cpp
  check_model.hpp
  collection_base.hpp
  collector_addresses.cpp
  collector_addresses.hpp
  collector_city_area.cpp
  collector_city_area.hpp
  collector_collection.cpp
  collector_collection.hpp
  collector_interface.hpp
  collector_tag.cpp
  collector_tag.hpp
  data_version.cpp
  data_version.hpp
  dumper.cpp
  dumper.hpp
  factory_utils.hpp
  feature_builder.cpp
  feature_builder.hpp
  feature_emitter_iface.hpp
  feature_generator.cpp
  feature_generator.hpp
  feature_helpers.cpp
  feature_helpers.hpp
  feature_maker.cpp
  feature_maker.hpp
  feature_maker_base.cpp
  feature_maker_base.hpp
  feature_merger.cpp
  feature_merger.hpp
  feature_processing_layers.cpp
  feature_processing_layers.hpp
  features_processing_helpers.hpp
  filter_collection.cpp
  filter_collection.hpp
  filter_elements.cpp
  filter_elements.hpp
  filter_interface.hpp
  filter_planet.cpp
  filter_planet.hpp
  filter_world.cpp
  filter_world.hpp
  final_processor_intermediate_mwm.cpp
  final_processor_intermediate_mwm.hpp
  gen_mwm_info.hpp
  generate_info.hpp
  geometry_holder.hpp
  geo_objects/geo_objects.cpp
  geo_objects/geo_objects.hpp
  geo_objects/geo_objects_filter.cpp
  geo_objects/geo_objects_filter.hpp
  geo_objects/geo_objects_generator.cpp
  geo_objects/geo_objects_generator.hpp
  geo_objects/geo_objects_maintainer.cpp
  geo_objects/geo_objects_maintainer.hpp
  holes.cpp
  holes.hpp
  intermediate_data.cpp
  intermediate_data.hpp
  intermediate_elements.hpp
  key_value_storage.cpp
  key_value_storage.hpp
  locality_sorter.cpp
  locality_sorter.hpp
  metalines_builder.cpp
  metalines_builder.hpp
  node_mixer.cpp
  node_mixer.hpp
  osm2meta.cpp
  osm2meta.hpp
  osm2type.cpp
  osm2type.hpp
  osm_element.cpp
  osm_element.hpp
  osm_element_helpers.cpp
  osm_element_helpers.hpp
  osm_o5m_source.hpp
  osm_source.cpp
  osm_xml_source.hpp
  place.cpp
  place.hpp
  place_node.hpp
  processor_factory.hpp
  processor_interface.hpp
  processor_noop.hpp
  processor_simple.cpp
  processor_simple.hpp
  promo_catalog_cities.hpp
  raw_generator.cpp
  raw_generator.hpp
  raw_generator_writer.cpp
  raw_generator_writer.hpp
  region_meta.cpp
  region_meta.hpp
  regions/admin_suburbs_marker.cpp
  regions/admin_suburbs_marker.hpp
  regions/collector_region_info.cpp
  regions/collector_region_info.hpp
  regions/country_specifier.cpp
  regions/country_specifier.hpp
  regions/country_specifier_builder.cpp
  regions/country_specifier_builder.hpp
  regions/level_region.hpp
  regions/locality_point_integrator.cpp
  regions/locality_point_integrator.hpp
  regions/node.cpp
  regions/node.hpp
  regions/place_point.hpp
  regions/place_points_integrator.cpp
  regions/place_points_integrator.hpp
  regions/region.cpp
  regions/region.hpp
  regions/region_base.cpp
  regions/region_base.hpp
  regions/region_info.cpp
  regions/region_info.hpp
  regions/region_info_getter.cpp
  regions/region_info_getter.hpp
  regions/regions.cpp
  regions/regions.hpp
  regions/regions_builder.cpp
  regions/regions_builder.hpp
  relation_tags.cpp
  relation_tags.hpp
  relation_tags_enricher.cpp
  relation_tags_enricher.hpp
  routing_helpers.cpp
  routing_helpers.hpp
  statistics.cpp
  statistics.hpp
  streets/street_geometry.cpp
  streets/street_geometry.hpp
  streets/street_regions_tracing.cpp
  streets/street_regions_tracing.hpp
  streets/streets.cpp
  streets/streets.hpp
  streets/streets_builder.cpp
  streets/streets_builder.hpp
  streets/streets_filter.cpp
  streets/streets_filter.hpp
  tag_admixer.hpp
  towns_dumper.cpp
  towns_dumper.hpp
  translation.cpp
  translation.hpp
  translator.cpp
  translator.hpp
  translator_collection.cpp
  translator_collection.hpp
  translator_factory.hpp
  translator_geo_objects.cpp
  translator_geo_objects.hpp
  translator_interface.hpp
  translator_region.cpp
  translator_region.hpp
  translator_streets.cpp
  translator_streets.hpp
  translators_pool.cpp
  translators_pool.hpp
  type_helper.cpp
  type_helper.hpp
  unpack_mwm.cpp
  unpack_mwm.hpp
  utils.cpp
  utils.hpp
  ways_merger.cpp
  ways_merger.hpp
  world_map_generator.hpp
)

geocore_add_library(${PROJECT_NAME} ${SRC})
geocore_link_libraries(${PROJECT_NAME}
  base
  coding
  indexer
  platform
  geometry
  jansson
)

geocore_add_test_subdirectory(generator_tests_support)
geocore_add_test_subdirectory(generator_tests)

add_subdirectory(generator_tool)
